--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,10 @@ jobs:
     - run: |
         npm install
         npm run build
+    - uses: actions/upload-artifact@master
+      with:
+        name: webpack artifacts
+        path: public/
       
   test:
     runs-on: ubuntu-latest
