--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,17 +23,22 @@ jobs:
         path: public/
       
   test:
+    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [8.x, 10.x]
     steps:
-      - uses: actions/checkout@2
-      - name: Use Node.js ${{ matrix.node-version}}
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@master
+        with:
+          name: webpack artifacts
+          path: public
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with: 
-          node-verion: ${{ matrix.node-version}}
+          node-verion: ${{ matrix.node-version }}
       - name: npm install, and test
         run: |
           npm install
