--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,43 +8,39 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: npm install and build webpack
-    - run: |
-        npm install
-        npm run build
-    - uses: actions/upload-artifact@master
-      with:
-        name: webpack artifacts
-        path: public/
-      
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [8.x, 10.x]
-    steps:
+    build:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: npm install and build webpack
+          run: |
+            npm install
+            npm run build
+        - uses: actions/upload-artifact@master
+          with:
+            name: webpack artifacts
+            path: public/
+          
+    test:
+      needs: build
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          os: [ubuntu-latest, windows-2016]
+          node-version: [8.x, 10.x]
+      steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@master
-        with:
+        with: 
           name: webpack artifacts
           path: public
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
-        with: 
-          node-verion: ${{ matrix.node-version }}
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: npm install, and test
         run: |
           npm install
           npm test
-        env: |
+        env:
           CI: true
-        
-        
-      - 
